<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/txtTitle"
        android:textColor="#4CAF50"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/txtSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtMileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="number" />

    <Button
        android:id="@+id/btnEstimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/btnEstimate"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imgFleet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgDescription"
        app:srcCompat="@drawable/main" />
</LinearLayout>